--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,13 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.MusicWave" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="color_background">@color/background_light</item>
+        <item name="color_element_background">@color/element_background_light</item>
+        <item name="color_foreground">@color/foreground_light</item>
+        <item name="color_text_on_background_primary">@color/text_on_background_primary_light</item>
+        <item name="color_text_on_background_secondary">@color/text_on_background_secondary_light</item>
+        <item name="color_text_on_element_background_primary">@color/text_on_element_background_primary_light</item>
+        <item name="color_text_on_element_background_secondary">@color/text_on_element_background_secondary_light</item>
     </style>
 
     <style name="Theme.MusicWave" parent="Base.Theme.MusicWave" />
