--- a/app/src/main/res/layout/fragment_all_songs.xml
+++ b/app/src/main/res/layout/fragment_all_songs.xml
@@ -3,8 +3,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragment.AllSongsFragment">
 
-    <
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/recycler_all_songs"
+        tools:listitem="@layout/item_song"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/text_no_songs"
+        android:text="@string/no_songs"
+        style="@style/text16.on_background_primary"
+        android:layout_gravity="center"
+        />
 
 </FrameLayout>
